<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RegisterTest</string>
    <string name="action_settings">Settings</string>
    <string name="title">欢迎注册</string>
    <string name="name">用户名：</string>
    <string name="tishi01">不能为空</string>
    <string name="password">密码：</string>
    <string name="tishi02">6~15位</string>
    <string name="password2">确认密码:</string>
    <string name="sex">性别:</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="city">所在地:</string>
    <string name="register">注册</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_choose_city">ChooseCityActivity</string>
    <string name="resultName">ChooseCityActivity</string>
    <string name="resultPsd">ChooseCityActivity</string>
    <string name="resultGender">ChooseCityActivity</string>
    <string name="resultCity">ChooseCityActivity</string>

</resources>