<TableLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/title"
        android:textSize="24sp" />

    <TableRow 
        android:id="@+id/trName" 
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvTishi01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tishi01"
            android:textSize="16sp" />
    </TableRow>

    <TableRow 
        android:id="@+id/trPassword"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword" >
        </EditText>

        <TextView
            android:id="@+id/tvTishi02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tishi02"
            android:textSize="16sp" />
    </TableRow>

    <TableRow 
        android:id="@+id/trPassword2" 
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tvPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password2"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow 
        android:id="@+id/trSex" 
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tvSex"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/rgSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:orientation="horizontal">"

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>

    </TableRow>

    <TableRow 
        android:id="@+id/trCity"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/city" />

        <EditText
            android:id="@+id/etCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress" />

    </TableRow>

    <Button
        android:id="@+id/btnRegister"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/register" />

</TableLayout>